--- a/css/styles.css
+++ b/css/styles.css
@@ -332,19 +332,25 @@ img {
 
 /* Boxing footer */
 
+.logo-down {
+  padding-top: 101.5px;
+  margin-bottom: 17.5px;
+}
+
+.footer-text {
+  padding-bottom: 100px;
+  max-width: 264px;
+}
+
 /* Boxing page 1 */
 
 .section-one {
-  display: flex;
   height: 600px;
-  align-items: center;
 }
 
 .title-one-page {
-  margin-top: 188px;
-  margin-right: 316px;
+  padding-top: 188px;
   margin-bottom: 48px;
-  margin-left: 316px;
   max-width: 496px;
 }
 
@@ -368,6 +374,36 @@ img {
   align-items: center;
 }
 
+.section-two-title {
+  margin-top: 120px;
+}
+
+.section-two-text {
+  margin-bottom: 120px;
+}
+
+.section-two-item {
+  gap: 24px;
+}
+
+.section-three-title {
+  margin-top: 120px;
+  margin-bottom: 72px;
+}
+
+.section-three-img {
+  margin-bottom: 120px;
+}
+
+.section-four-title {
+  padding-top: 120px;
+  margin-bottom: 72px;
+}
+
+.section-four-item {
+  margin-bottom: 120px;
+}
+
 /* Boxing page 2*/
 
 .button-two {
@@ -378,5 +414,11 @@ img {
 .img-list-two {
   display: flex;
   flex-wrap: wrap;
+  gap: 24px;
+}
+
+.two-section-one-list {
+  margin-top: 96px;
+  margin-bottom: 72px;
   gap: 24px;
 }
