--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #404bbf;
-  background-color: #404bbf;
 }
 
 .button-order {
@@ -332,26 +331,31 @@ img {
 
 /* Boxing footer */
 
-.logo-down {
+.foot {
   padding-top: 101.5px;
+  padding-bottom: 100px;
+}
+
+.logo-down {
   margin-bottom: 17.5px;
 }
 
 .footer-text {
-  padding-bottom: 100px;
   max-width: 264px;
 }
 
 /* Boxing page 1 */
 
 .section-one {
-  height: 600px;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .title-one-page {
-  padding-top: 188px;
-  margin-bottom: 48px;
   max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 64px;
 }
 
 .button-order {
@@ -359,6 +363,8 @@ img {
   margin-right: 635px;
   margin-bottom: 188px;
   margin-left: 636px;
+  width: 169px;
+  height: 56px;
   display: block;
   margin: 0 auto;
 }
@@ -370,38 +376,48 @@ img {
 }
 
 .sec-two {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.sec-two-list {
   display: flex;
   align-items: center;
-}
-
-.section-two-title {
-  margin-top: 120px;
-}
-
-.section-two-text {
-  margin-bottom: 120px;
-}
-
-.section-two-item {
   gap: 24px;
 }
 
+.section-two-item {
+  max-width: 264px;
+}
+
+.section-three {
+  padding-bottom: 120px;
+}
+
 .section-three-title {
-  margin-top: 120px;
   margin-bottom: 72px;
 }
 
-.section-three-img {
-  margin-bottom: 120px;
+.section-four {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .section-four-title {
-  padding-top: 120px;
   margin-bottom: 72px;
 }
 
-.section-four-item {
-  margin-bottom: 120px;
+.sec-four-over {
+  text-align: center;
+}
+
+.section-four-photo {
+  margin-top: 32px;
+  margin-bottom: 8px;
+}
+
+.profession {
+  margin-bottom: 32px;
 }
 
 /* Boxing page 2*/
@@ -418,11 +434,22 @@ img {
 }
 
 .two-section-one-list {
-  margin-top: 96px;
-  margin-bottom: 72px;
+  padding-top: 96px;
+  padding-bottom: 72px;
   gap: 24px;
 }
 
 .img-list-two {
   padding-bottom: 120px;
+}
+
+.page-two-over {
+  border: 1px solid #e7e9fc;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+}
+
+.two-text {
+  margin-top: 8px;
 }
